--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "fidget-remote-server",
+  "repository":{
+      "type":"git",
+      "url": "https://github.com/Thoross/Fidget-Remote.git"
+  },
   "dependencies": {
-    "socket.io": "0.9.16"
+    "socket.io": "0.9.16",
+    "jade": "0.35.0",
+    "bower":"*",
+    "express": "3.x"
   }
 }
