--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "bootswatch": "3.0.1",
     "angular": "1.0.8",
     "socket.io-client": "0.9.16",
-    "angular-socket-io": "0.2.0"
+    "angular-socket-io": "0.2.0",
+    "ngInfiniteScroll": "1.0.0"
   }
 }
